# garment-correction

./: CAMBIOS_COLOR_ANALYSIS.md  README.md  filter_data.py  fix_masks.py  inspect_masks.py  pyproject.toml  requirements.txt  setup.cfg  test_mask_fix.py  test_masks.py
configs/: model1.yaml  model2.yaml  model3.yaml
src/: __init__.py  color_analysis.py  data.py  losses_metrics.py  utils.py
src/cli/: degrade_on_model.py  evaluate_corrected.py  infer_masks.py  infer_recolor.py  train_model1.py  train_model2.py  train_model3.py  visualize_results.py
src/models/: attention.py  blocks.py  recolor_unet.py  seg_unet.py
tests/: test_color.py  test_degradation.py  test_model1_shapes.py  test_seg_threshold.py
